# iridium

./: .gitignore  .travis.yml  Cargo.toml  README.md  SUMMARY.md  book.toml  build.rs  custom.css
.github/workflows/: gh-pages.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
data/: resources.gresource.xml
data/resources/css/: base.css
data/resources/ui/: about.ui  import.ui  setup.ui  shortcuts.ui  sync.ui  window.ui
docs/: intro.md  usage.md
libs/standardfile/: Cargo.toml
libs/standardfile/src/: crypto.rs  lib.rs  remote.rs
shell/: Cargo.toml  build.rs
shell/data/: resources.gresource.xml
shell/data/resources/css/: base.css
shell/data/resources/ui/: about.ui  import.ui  setup.ui  window.ui
shell/src/: config.rs  consts.rs  main.rs  secret.rs  storage.rs
shell/src/ui/: application.rs  controller.rs  mod.rs  model.rs  state.rs  utils.rs  window.rs
src/: config.rs  consts.rs  main.rs  models.rs  secret.rs  storage.rs
src/standardfile/: crypto.rs  mod.rs  remote.rs
src/ui/: application.rs  mod.rs  state.rs  utils.rs  window.rs
utils/: Cargo.toml
utils/src/: main.rs
