[package]
name = "iridium"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16"
data-encoding = "2.2.0"
aes = "0.3.2"
block-modes = "0.3.3"
gtk = { version = "0.8", features = ["v3_22"] }
glib = "0.9"
gio = { version = "0.8", features = ["v2_46"] }
gdk = "0.12"
