[package]
name = "iridium"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4" }
data-encoding = "2.2.0"
directories = "2.0"
env_logger = "0"
log = "0"
gtk = { version = "0.8", features = ["v3_22"] }
glib = "0.9"
gio = { version = "0.8", features = ["v2_46"] }
gdk = "0.12"
ring = "0.16"
secret-service = "1.0"
serde = { version = "1.0", features = ["derive"] }
standardfile = { path = "../libs/standardfile" }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
