[package]
name = "iridium"
version = "0.2.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4" }
data-encoding = "2.2.0"
directories = "3"
env_logger = "0"
log = "0"
gtk = { version = "0.9", features = ["v3_22"] }
glib = "0.10"
gio = { version = "0.9", features = ["v2_46"] }
gdk = "0.13"
ring = "0.16"
secret-service = "1.0"
serde = { version = "1.0", features = ["derive"] }
standardfile = { path = "../libs/standardfile" }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
